# Data-Science-from-Scratch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vector_operations.cpp  vector_operations.h  vector_operations_tests.cc
c/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Data-Science-from-Scratch.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.vcxproj  main.vcxproj.filters  scalar_operations.vcxproj  scalar_operations.vcxproj.filters  scalar_operations_test.vcxproj  scalar_operations_test.vcxproj.filters  scalar_operations_test[1]_include.cmake  scalar_operations_test[1]_tests.cmake  vcpkg-configuration.json  vcpkg.json
c/src/: scalar_operations.c
c/src/include/: scalar_operations.h
c/tests/: scalar_operations_test.cpp
cpp/: CMakeLists.txt  README.md  main.cpp
cpp/src/: CMakeLists.txt
cpp/src/matrix_operations/: CMakeLists.txt  matrix_operations.cpp  tmp.cpp
cpp/src/matrix_operations/include/: matrix_operations.h
cpp/src/statistics/: statistics.cpp
cpp/src/statistics/include/: statistics.h
cpp/src/vector_operations/: CMakeLists.txt  vector_operations.cpp
cpp/src/vector_operations/include/: vector_operations.h
cpp/tests/: CMakeLists.txt  matrix_operations_tests.cc  vector_operations_tests.cc
python/: pyproject.toml
python/src/: matrix_operations.py  probability.py  stats.py  vector_operations.py
python/tests/: test_probability.py  test_scalar_operations.py  test_stats.py  test_vector_operations.py
rust/: Cargo.toml
rust/src/: lib.rs  matrix_operations.rs  probability.rs  scalar_operations.rs  stats.rs  vector_operations.rs
rust/tests/: integration_test.rs
